cleanup q-ctrl file

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -107,16 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "11af8fb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/functions\n",
-    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# Access Function\n",
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2595df84",
    "metadata": {},
    "outputs": [],
@@ -486,7 +483,7 @@
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_kyiv\", or omit to default to the least busy device\n",
+    "    backend_name=backend_name,  # Such as \"ibm_kyiv\", or omit to default to the least busy device\n",
     ")"
    ]
   },
@@ -653,13 +650,22 @@
     "### Sampler inputs\n",
     "<Admonition type=\"caution\">Fire Opal Performance Management accepts abstract circuits, in contrast to the native Qiskit Runtime primitives, which only accept circuits that are written in the target backend’s Instruction Set Architecture (ISA). For best results, do not transpile circuits before submitting via the Performance Management function. </Admonition>\n",
     "\n",
+    "<LegacyContent>\n",
+    "| Name       | Type            | Description | Required | Default | Example |\n",
+    "|------------|---------------|------------------|----------|----------|--------------------|\n",
+    "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
+    "| instance   | `str`     | The hub/group/project to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"hub/group/project\"`   |\n",
+    "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
+    "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
     "| Name       | Type            | Description | Required | Default | Example |\n",
     "|------------|---------------|------------------|----------|----------|--------------------|\n",
     "| pubs       | `QctrlSamplerPubLike` or `list[QctrlSamplerPubLike]`   | One or more tuples containing the inputs listed under `SamplerPubLike` components     | Yes      | N/A | `(circuit, parameter_values)`            |\n",
     "| instance   | `str`     | The cloud resource name to use in that format        | No | A Premium access instance is randomly chosen if your account has access to multiple instances     | `\"CRN\"`   |\n",
     "| backend_name| `str`  | The name of the backend | No  |  The least busy backend that your instance has access to | `\"ibm_fez\"` |\n",
     "| options| `dict`  | Input options; see Options section for more details | No  |  See the Options section for details | `{\"default_shots\": 2048}` |\n",
-    "\n",
+    "</CloudContent>\n",
     "**`QctrlSamplerPubLike` components (derived from the [Qiskit Runtime PUB definition](/guides/primitive-input-output#sampler-pub)):**\n",
     "- A single circuit defined as a `QuantumCircuit` or in OpenQASM 2.0 or 3.0 string format.\n",
     "- (Optional) A collection of parameter values to bind the circuit against.\n",
