cleanup in multiverse

--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -576,7 +576,12 @@
    "source": [
     "## Get started\n",
     "\n",
-    "Select the Qiskit Function as follows:"
+    "<LegacyContent>\n",
+    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the Qiskit Function as follows:\n",
+    "</CloudContent>"
    ]
   },
   {
@@ -588,10 +593,6 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "# authentication\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/functions\n",
-    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "# load function\n",
