--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -23,6 +23,17 @@
    "source": [
     "# Singularity Machine Learning - Classification: A Qiskit Function by Multiverse Computing\n",
     "\n",
+    "<LegacyContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.](https://quantum.cloud.ibm.com/docs/guides/multiverse-computing-singularity)\n",
+    "</Admonition>\n",
+    "</LegacyContent>\n",
+    "<CloudContent>\n",
+    "<Admonition type=\"note\">\n",
+    "This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/multiverse-computing-singularity)\n",
+    "</Admonition>\n",
+    "</CloudContent>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "With the \"Singularity Machine Learning - Classification\" function, you can solve real-world machine learning problems on quantum hardware without requiring quantum expertise. This Application function, based on ensemble methods, is a hybrid classifier. It leverages classical methods like boosting, bagging, and stacking for initial ensemble training. Subsequently, quantum algorithms such as variational quantum eigensolver (VQE) and quantum approximate optimization algorithm (QAOA) are employed to enhance the trained ensemble's diversity, generalization capabilities, and overall complexity.\n",
