cleanup in serverless-first-program

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -56,7 +56,7 @@
    "id": "b32bff85-1760-4296-8f5b-ea6e5c942bbe",
    "metadata": {},
    "source": [
-    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum&trade; Platform to use as a reusable remote service."
+    "This example demonstrates how to use `qiskit-serverless` tools to create a parallel transpilation program, and then implement `qiskit-ibm-catalog` to deploy your program to IBM Quantum&reg; Platform to use as a reusable remote service."
    ]
   },
   {
@@ -257,12 +257,14 @@
     "\n",
     "The previous section created a program to be run remotely. The code cells in this section upload that program to Qiskit Serverless.\n",
     "\n",
+    "<LegacyContent>\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
-    "<LegacyContent>\n",
     "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
+    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key, which you can find on the [IBM Quantum dashboard](https://quantum.cloud.ibm.com), and upload the program.\n",
+    "\n",
     "You can use `save_account()` to save your credentials (See the [Set up to use IBM Cloud](/guides/cloud-setup#cloud-save) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
     "</CloudContent>"
    ]
