--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -67,7 +67,7 @@
    "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
-    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic with the following code.",
+    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic with the following code.\n",
     "\n",
     "<LegacyContent>\n",
     "The following code requires that you have already [saved your credentials](/guides/setup-channel#iqp).\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
    "metadata": {},
    "outputs": [
@@ -115,9 +115,6 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_serverless import distribute_task\n",
     "\n",
-    "# If you have not previously saved your credentials, follow instructions at\n",
-    "# https://docs.quantum.ibm.com/guides/setup-channel#iqp\n",
-    "# to authenticate with your API token.\n",
     "service = QiskitRuntimeService()\n",
     "\n",
     "@distribute_task(target={\"cpu\": 1})\n",
