--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -30,10 +30,7 @@ from qiskit.circuit.random import random_circuit
 qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]
 optimization_level = 3
 
-# If you have not previously saved your credentials, follow instructions at
-# https://docs.quantum.ibm.com/guides/setup-channel#iqp
-# to authenticate with your API token.
-service = QiskitRuntimeService(channel="ibm_quantum")
+service = QiskitRuntimeService()
 backend = service.get_backend(backend_name)
 
 pass_manager = generate_preset_pass_manager(
@@ -85,8 +82,7 @@ def transpile_parallel(circuit, pass_manager):
 
 try:
     # Get backend
-    # Follow instructions at https://docs.quantum.ibm.com/guides/setup-channel#iqp to authenticate with your API token.
-    service = QiskitRuntimeService(channel="ibm_quantum")
+    service = QiskitRuntimeService()
     backend = service.get_backend(backend_name)
 
     # run distributed tasks as async function
@@ -125,9 +121,6 @@ from qiskit.circuit.random import random_circuit
 qc_random = [(random_circuit(20, 20, measure=True)) for _ in range(30)]
 optimization_level = 3
 
-# If you have not previously saved your credentials, follow instructions at
-# https://quantum.cloud.ibm.com/docs/guides/cloud-setup
-# to authenticate with your API key.
 service = QiskitRuntimeService(channel="ibm_cloud")
 backend = service.get_backend(backend_name)
 
@@ -180,8 +173,7 @@ def transpile_parallel(circuit, pass_manager):
 
 try:
     # Get backend
-    # Follow instructions at https://quantum.cloud.ibm.com/docs/guides/cloud-setup to authenticate with your API key.
-    service = QiskitRuntimeService(channel="ibm_cloud")
+    service = QiskitRuntimeService()
     backend = service.get_backend(backend_name)
 
     # run distributed tasks as async function
@@ -211,7 +203,7 @@ except Exception as e:
 
 ## Upload to Qiskit Serverless
 
-Follow the instructions on the [Introduction to Qiskit Functions](/guides/functions) page to authenticate with your API token.
+Follow the instructions on the [Introduction to Qiskit Functions](/guides/functions) page to authenticate with your API key.
 
 ```python
 from qiskit_ibm_catalog import QiskitServerless, QiskitFunction
