--- a/docs/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/migration-guides/qiskit-runtime-examples.mdx
@@ -216,11 +216,11 @@ job = estimator.run([(isa_circuit, isa_observable)])
 # Get results for the first (and only) PUB
 pub_result = job.result()[0]
 
-print(f">>> Expectation value: {pub_result.data.evs}")
+print(f"Expectation value: {pub_result.data.evs}")
 ```
 Output
 ```text
->>> Expectation value: [-0.8879899326312926]
+ Expectation value: [-0.8879899326312926]
 ```
   </TabItem>
 
@@ -250,7 +250,7 @@ expectation_value = sampler.eval().real
 ```
 
 ``` python
->>> print("expectation: ", expectation_value)
+print("expectation: ", expectation_value")
 expectation:  -1.065734058826613
 ```
   </TabItem>
@@ -461,7 +461,7 @@ result = backend.run(isa_circuit, shots=1024).result()
 ```
 
 ``` python
->>> print("result: ", result)
+print("result: ", result)
 result:  Result(backend_name='ibmq_qasm_simulator', backend_version='0.11.0',
 qobj_id='65bb8a73-cced-40c1-995a-8961cc2badc4', job_id='63fc95612751d57b6639f777',
 success=True, results=[ExperimentResult(shots=1024, success=True, meas_level=2,
@@ -486,7 +486,7 @@ Now we get the probability distribution from the output:
 ``` python
 counts = result.get_counts(isa_circuit)
 
->>> print("counts: ", counts)
+print("counts: ", counts)
 counts:  {'0000': 255, '0001': 258, '0010': 243, '0011': 268}
 ```
 
