--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -408,7 +408,7 @@
    "id": "ca9791df-60c2-49d8-8541-741078ea63c6",
    "metadata": {},
    "source": [
-    "## List previously run jobs run with Qiskit Serverless\n",
+    "## List jobs previously run with Qiskit Serverless\n",
     "\n",
     "You can use `jobs()` to list all jobs submitted to Qiskit Serverless:"
    ]
