--- a/docs/guides/kipu-optimization.ipynb
+++ b/docs/guides/kipu-optimization.ipynb
@@ -279,6 +279,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5cd4ac8",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"note\">\n",
+    "The following code assumes that you have saved your credentials. If you have not, follow the instructions in <LegacyContent>[Set up an IBM Quantum channel](/guides/setup-channel#iqp)</LegacyContent><CloudContent>[Set up your IBM Cloud account](/guides/cloud-setup#cloud-untrusted)</CloudContent> to authenticate with your API token.\n",
+    "</Admonition>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "95a715d2",
