Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -49,7 +49,7 @@ Example of citing IBM Quantum Composer:
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
 
 <CloudContent>
-## I'm an administrator but I can't access my administration tasks
+## I'm an administrator but I can't access my administration tasks.
 
 Try choosing a different account from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
 
@@ -62,7 +62,7 @@ Try choosing a different account from the account switcher in the top header of 
 
 Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-nature`, now have to be installed separately.
 
-Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions, such as `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum™ provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features.
+Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions, such as `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum&reg; provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features.
 
 These separate software packages were combined into what was called the Qiskit *metapackage*, which allowed users to install all of these components together through `pip install qiskit`. This metapackage architecture was removed with the release of the Qiskit SDK v1.0, and now each of the individual software distributions needs to be installed separately.
 
