--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -48,18 +48,28 @@ Example of citing IBM Quantum Composer:
 
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
 
+<CloudContent>
+## I'm an administrator but I can't access my administration tasks.
+
+Try choosing a different account from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+
+## I don't see something in the user interface.
+
+Try choosing a different account from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+</CloudContent>
+
 ## What happened to Python distributions such as Qiskit Aer, Qiskit Nature, and Qiskit Experiments?
 
 Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-nature`, now have to be installed separately.
 
-Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions, such as `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum™ provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features. 
+Before the release of the Qiskit SDK v1.0, Qiskit was comprised of many different Python distributions, such as `qiskit-terra`, the compiler core; `qiskit-aer`, the high-performance simulator; the original IBM Quantum&reg; provider; and several now-obsolete packages providing particular exploratory algorithmic or experiment-running features.
 
-These separate software packages were combined into what was called the Qiskit *metapackage*, which allowed users to install all of these components together through `pip install qiskit`. This metapackage architecture was removed with the release of the Qiskit SDK v1.0, and now each of the individual software distributions needs to be installed separately. 
+These separate software packages were combined into what was called the Qiskit *metapackage*, which allowed users to install all of these components together through `pip install qiskit`. This metapackage architecture was removed with the release of the Qiskit SDK v1.0, and now each of the individual software distributions needs to be installed separately.
 
 If you want to install the packages that were previously included in the Qiskit metapackage, visit the [Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) to find a range of packages to suit your needs. You can also read the [v1.0 migration guide](/migration-guides/metapackage-migration) for more information about this change.
 
 ## Why do I receive the error message "AttributeError: `QuantumCircuit` object has no attribute `save_state`" when using `save_*`method on a circuit?
-  
+
 The `save_*` instructions are part of Qiskit Aer project,
 a high performance simulator for quantum circuits. These instructions do not
 exist outside of Qiskit Aer and are added dynamically to the
