--- a/docs/api/qiskit-addon-sqd/release-notes.mdx
+++ b/docs/api/qiskit-addon-sqd/release-notes.mdx
@@ -10,19 +10,51 @@ in_page_toc_max_heading_level: 2
 
 # Sample-based quantum diagonalization (SQD) release notes
 
-<span id="release-notes-0-9-0" />
+<span id="release-notes-0-10-0" />
 
 <span id="id2" />
+
+## 0.10.0
+
+<span id="release-notes-0-10-0-upgrade-notes" />
+
+### Upgrade Notes
+
+*   Removed `qiskit_addon_sqd.fermion.flip_orbital_occupancies()`. Users no longer need to flip the orbital occupancies output from [`qiskit_addon_sqd.fermion.solve_fermion()`](fermion#solve_fermion "qiskit_addon_sqd.fermion.solve_fermion") and [`qiskit_addon_sqd.fermion.optimize_orbitals()`](fermion#optimize_orbitals "qiskit_addon_sqd.fermion.optimize_orbitals"); they will be output in the order expected by [`qiskit_addon_sqd.configuration_recovery.recover_configurations()`](configuration-recovery#recover_configurations "qiskit_addon_sqd.configuration_recovery.recover_configurations"): `tuple(array([occ_a_0, ..., occ_a_N]), array([occ_b_0, ..., occ_b_N]))`.
+
+<span id="release-notes-0-10-0-deprecation-notes" />
+
+### Deprecation Notes
+
+*   The `avg_occupancies` argument to [`qiskit_addon_sqd.configuration_recovery.recover_configurations()`](configuration-recovery#recover_configurations "qiskit_addon_sqd.configuration_recovery.recover_configurations") should now be a length-2 tuple containing the spin-up and spin-down occupancies, respectively.
+
+    Old format: `array([occ_b_N, ..., occ_b_0, occ_a_N, ..., occ_a_0])`
+
+    New format: `tuple(array([occ_a_0, ..., occ_a_N]), array([occ_b_0, ..., occ_b_N]))`
+
+<span id="release-notes-0-10-0-bug-fixes" />
+
+### Bug Fixes
+
+*   Fixed a bug which would cause the energy output from [`qiskit_addon_sqd.fermion.solve_fermion()`](fermion#solve_fermion "qiskit_addon_sqd.fermion.solve_fermion") to be incorrect when the input `spin_sq` deviates from the spin^2 of the output wavefunction.
+
+<span id="release-notes-0-9-0" />
+
+<span id="id3" />
 
 ## 0.9.0
 
 <span id="release-notes-0-9-0-upgrade-notes" />
+
+<span id="id4" />
 
 ### Upgrade Notes
 
 *   [`qiskit_addon_sqd.fermion.optimize_orbitals()`](fermion#optimize_orbitals "qiskit_addon_sqd.fermion.optimize_orbitals") and [`qiskit_addon_sqd.fermion.rotate_integrals()`](fermion#rotate_integrals "qiskit_addon_sqd.fermion.rotate_integrals") now require `k_flat` to specify the upper triangle (not including diagonal) of the rotation matrix, rather than the entire matrix.
 
 <span id="release-notes-0-9-0-bug-fixes" />
+
+<span id="id5" />
 
 ### Bug Fixes
 
@@ -32,7 +64,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-8-0" />
 
-<span id="id3" />
+<span id="id6" />
 
 ## 0.8.0
 
@@ -46,7 +78,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-8-0-upgrade-notes" />
 
-<span id="id4" />
+<span id="id7" />
 
 ### Upgrade Notes
 
@@ -54,13 +86,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-7-0" />
 
-<span id="id5" />
+<span id="id8" />
 
 ## 0.7.0
 
 <span id="release-notes-0-7-0-bug-fixes" />
 
-<span id="id6" />
+<span id="id9" />
 
 ### Bug Fixes
 
@@ -70,13 +102,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-6-0" />
 
-<span id="id7" />
+<span id="id10" />
 
 ## 0.6.0
 
 <span id="release-notes-0-6-0-upgrade-notes" />
 
-<span id="id8" />
+<span id="id11" />
 
 ### Upgrade Notes
 
@@ -127,6 +159,8 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-6-0-deprecation-notes" />
 
+<span id="id12" />
+
 ### Deprecation Notes
 
 *   The [`qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses()`](fermion#bitstring_matrix_to_sorted_addresses "qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses") function has been deprecated in favor of [`qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs()`](fermion#bitstring_matrix_to_ci_strs "qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs"). These two functions behave the same with one key exception – [`qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses()`](fermion#bitstring_matrix_to_sorted_addresses "qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses") returns the configurations as `tuple(spin_dn, spin_up)`; whereas, [`qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs()`](fermion#bitstring_matrix_to_ci_strs "qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs") returns the configurations as `tuple(spin_up, spin_dn)`.
@@ -154,7 +188,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-6-0-bug-fixes" />
 
-<span id="id9" />
+<span id="id13" />
 
 ### Bug Fixes
 
@@ -164,13 +198,13 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-5-0" />
 
-<span id="id10" />
+<span id="id14" />
 
 ## 0.5.0
 
 <span id="release-notes-0-5-0-upgrade-notes" />
 
-<span id="id11" />
+<span id="id15" />
 
 ### Upgrade Notes
 
@@ -228,7 +262,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="release-notes-0-4-0" />
 
-<span id="id12" />
+<span id="id16" />
 
 ## 0.4.0
 
@@ -240,7 +274,7 @@ This is a minor release which introduces a couple of small, but important, break
 
 <span id="release-notes-0-4-0-upgrade-notes" />
 
-<span id="id13" />
+<span id="id17" />
 
 ### Upgrade Notes
 
