--- a/docs/api/qiskit-addon-sqd/0.9/counts.mdx
+++ b/docs/api/qiskit-addon-sqd/0.9/counts.mdx
@@ -1,6 +1,6 @@
 ---
-title: counts (latest version)
-description: API reference for qiskit_addon_sqd.counts in the latest version of qiskit-addon-sqd
+title: counts (v0.9)
+description: API reference for qiskit_addon_sqd.counts in qiskit-addon-sqd v0.9
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.counts
@@ -18,7 +18,7 @@ Functions for transforming counts dictionaries.
 
 ### counts\_to\_arrays
 
-<Function id="qiskit_addon_sqd.counts.counts_to_arrays" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/counts.py#L21-L40" signature="counts_to_arrays(counts)">
+<Function id="qiskit_addon_sqd.counts.counts_to_arrays" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/counts.py#L21-L40" signature="counts_to_arrays(counts)">
   Convert a counts dictionary into a bitstring matrix and a probability array.
 
   **Parameters**
@@ -37,7 +37,7 @@ Functions for transforming counts dictionaries.
 
 ### generate\_counts\_uniform
 
-<Function id="qiskit_addon_sqd.counts.generate_counts_uniform" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/counts.py#L43-L77" signature="generate_counts_uniform(num_samples, num_bits, rand_seed=None)">
+<Function id="qiskit_addon_sqd.counts.generate_counts_uniform" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/counts.py#L43-L77" signature="generate_counts_uniform(num_samples, num_bits, rand_seed=None)">
   Generate a bitstring counts dictionary of samples drawn from the uniform distribution.
 
   **Parameters**
@@ -61,7 +61,7 @@ Functions for transforming counts dictionaries.
 
 ### generate\_counts\_bipartite\_hamming
 
-<Function id="qiskit_addon_sqd.counts.generate_counts_bipartite_hamming" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/counts.py#L80-L134" signature="generate_counts_bipartite_hamming(num_samples, num_bits, *, hamming_right, hamming_left, rand_seed=None)">
+<Function id="qiskit_addon_sqd.counts.generate_counts_bipartite_hamming" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/counts.py#L80-L134" signature="generate_counts_bipartite_hamming(num_samples, num_bits, *, hamming_right, hamming_left, rand_seed=None)">
   Generate a bitstring counts dictionary with specified bipartite hamming weight.
 
   **Parameters**
@@ -89,7 +89,7 @@ Functions for transforming counts dictionaries.
 
 ### normalize\_counts\_dict
 
-<Function id="qiskit_addon_sqd.counts.normalize_counts_dict" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/counts.py#L137-L144" signature="normalize_counts_dict(counts)">
+<Function id="qiskit_addon_sqd.counts.normalize_counts_dict" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/counts.py#L137-L144" signature="normalize_counts_dict(counts)">
   Convert a counts dictionary into a probability dictionary.
 
   **Parameters**
