--- a/docs/api/qiskit-addon-sqd/0.9/fermion.mdx
+++ b/docs/api/qiskit-addon-sqd/0.9/fermion.mdx
@@ -1,6 +1,6 @@
 ---
-title: fermion (latest version)
-description: API reference for qiskit_addon_sqd.fermion in the latest version of qiskit-addon-sqd
+title: fermion (v0.9)
+description: API reference for qiskit_addon_sqd.fermion in qiskit-addon-sqd v0.9
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.fermion
@@ -18,7 +18,7 @@ Functions for the study of fermionic systems.
 
 ### SCIState
 
-<Class id="qiskit_addon_sqd.fermion.SCIState" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L32-L69" signature="SCIState(amplitudes, ci_strs_a, ci_strs_b)" modifiers="class">
+<Class id="qiskit_addon_sqd.fermion.SCIState" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L32-L69" signature="SCIState(amplitudes, ci_strs_a, ci_strs_b)" modifiers="class">
   Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")
 
   The amplitudes and determinants describing a quantum state.
@@ -49,20 +49,20 @@ Functions for the study of fermionic systems.
 
   #### load
 
-  <Function id="qiskit_addon_sqd.fermion.SCIState.load" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L65-L69" signature="load(filename)" modifiers="classmethod">
+  <Function id="qiskit_addon_sqd.fermion.SCIState.load" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L65-L69" signature="load(filename)" modifiers="classmethod">
     Load an SCIState object from an .npz file.
   </Function>
 
   #### save
 
-  <Function id="qiskit_addon_sqd.fermion.SCIState.save" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L59-L63" signature="save(filename)">
+  <Function id="qiskit_addon_sqd.fermion.SCIState.save" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L59-L63" signature="save(filename)">
     Save the SCIState object to an .npz file.
   </Function>
 </Class>
 
 ### bitstring\_matrix\_to\_ci\_strs
 
-<Function id="qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L386-L430" signature="bitstring_matrix_to_ci_strs(bitstring_matrix, open_shell=False)">
+<Function id="qiskit_addon_sqd.fermion.bitstring_matrix_to_ci_strs" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L399-L443" signature="bitstring_matrix_to_ci_strs(bitstring_matrix, open_shell=False)">
   Convert bitstrings (rows) in a `bitstring_matrix` into integer representations of determinants.
 
   This function separates each bitstring in `bitstring_matrix` in half, flips the bits and translates them into integer representations, and finally appends them to their respective (spin-up or spin-down) lists. Those lists are sorted and output from this function.
@@ -83,7 +83,7 @@ Functions for the study of fermionic systems.
 
 ### enlarge\_batch\_from\_transitions
 
-<Function id="qiskit_addon_sqd.fermion.enlarge_batch_from_transitions" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L433-L456" signature="enlarge_batch_from_transitions(bitstring_matrix, transition_operators)">
+<Function id="qiskit_addon_sqd.fermion.enlarge_batch_from_transitions" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L446-L469" signature="enlarge_batch_from_transitions(bitstring_matrix, transition_operators)">
   Apply the set of transition operators to the configurations represented in `bitstring_matrix`.
 
   **Parameters**
@@ -100,9 +100,33 @@ Functions for the study of fermionic systems.
   [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")
 </Function>
 
+### flip\_orbital\_occupancies
+
+<Function id="qiskit_addon_sqd.fermion.flip_orbital_occupancies" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L323-L343" signature="flip_orbital_occupancies(occupancies)">
+  Flip an orbital occupancy array to match the indexing of a bitstring.
+
+  This function reformats a 1D array of spin-orbital occupancies formatted like:
+
+  > `[occ_a_1, occ_a_2, ..., occ_a_N, occ_b_1, ..., occ_b_N]`
+
+  To an array formatted like:
+
+  > `[occ_a_N, ..., occ_a_1, occ_b_N, ..., occ_b_1]`
+
+  where `N` is the number of spatial orbitals.
+
+  **Parameters**
+
+  **occupancies** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"))
+
+  **Return type**
+
+  [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")
+</Function>
+
 ### solve\_fermion
 
-<Function id="qiskit_addon_sqd.fermion.solve_fermion" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L72-L171" signature="solve_fermion(bitstring_matrix, /, hcore, eri, *, open_shell=False, spin_sq=None, max_davidson=100, verbose=None)">
+<Function id="qiskit_addon_sqd.fermion.solve_fermion" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L72-L162" signature="solve_fermion(bitstring_matrix, /, hcore, eri, *, open_shell=False, spin_sq=None, max_davidson=100, verbose=None)">
   Approximate the ground state given molecular integrals and a set of electronic configurations.
 
   **Parameters**
@@ -119,7 +143,7 @@ Functions for the study of fermionic systems.
 
   *   **open\_shell** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – A flag specifying whether configurations from the left and right halves of the bitstrings should be kept separate. If `False`, CI strings from the left and right halves of the bitstrings are combined into a single set of unique configurations and used for both the alpha and beta subspaces.
 
-  *   **spin\_sq** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)") *| None*) – Target value for the total spin squared for the ground state. If `None`, no spin will be imposed.
+  *   **spin\_sq** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)") *| None*) – Target value for the total spin squared for the ground state. If `None`, no spin will be imposed.
 
   *   **max\_davidson** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The maximum number of cycles of Davidson’s algorithm
 
@@ -129,17 +153,17 @@ Functions for the study of fermionic systems.
 
   *   Minimum energy from SCI calculation
   *   The SCI ground state
-  *   Tuple containing orbital occupancies for spin-up and spin-down orbitals. Formatted as: `(array([occ_a_0, ..., occ_a_N]), array([occ_b_0, ..., occ_b_N]))`
+  *   Average occupancy of the alpha and beta orbitals, respectively
   *   Expectation value of spin-squared
 
   **Return type**
 
-  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)"), [*SCIState*](#qiskit_addon_sqd.fermion.SCIState "qiskit_addon_sqd.fermion.SCIState"), [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")], [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")]
+  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)"), [*SCIState*](#qiskit_addon_sqd.fermion.SCIState "qiskit_addon_sqd.fermion.SCIState"), [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")], [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")]
 </Function>
 
 ### optimize\_orbitals
 
-<Function id="qiskit_addon_sqd.fermion.optimize_orbitals" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L174-L290" signature="optimize_orbitals(bitstring_matrix, /, hcore, eri, k_flat, *, open_shell=False, spin_sq=0.0, num_iters=10, num_steps_grad=10000, learning_rate=0.01, max_davidson=100)">
+<Function id="qiskit_addon_sqd.fermion.optimize_orbitals" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L165-L280" signature="optimize_orbitals(bitstring_matrix, /, hcore, eri, k_flat, *, open_shell=False, spin_sq=0.0, num_iters=10, num_steps_grad=10000, learning_rate=0.01, max_davidson=100)">
   Optimize orbitals to produce a minimal ground state.
 
   The process involves iterating over 3 steps:
@@ -182,16 +206,16 @@ Functions for the study of fermionic systems.
 
   *   The groundstate energy found during the last optimization iteration
   *   An optimized 1D array defining the orbital transform
-  *   Tuple containing orbital occupancies for spin-up and spin-down orbitals. Formatted as: `(array([occ_a_0, ..., occ_a_N]), array([occ_b_0, ..., occ_b_N]))`
+  *   Average orbital occupancy
 
   **Return type**
 
-  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"), [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")]]
+  [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)"), [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)"), [list](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")\[[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")]]
 </Function>
 
 ### rotate\_integrals
 
-<Function id="qiskit_addon_sqd.fermion.rotate_integrals" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L293-L330" signature="rotate_integrals(hcore, eri, k_flat)">
+<Function id="qiskit_addon_sqd.fermion.rotate_integrals" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L283-L320" signature="rotate_integrals(hcore, eri, k_flat)">
   Perform a similarity transform on the integrals.
 
   The transformation is described as:
@@ -220,7 +244,7 @@ $$
 
 ### bitstring\_matrix\_to\_sorted\_addresses
 
-<Function id="qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/fermion.py#L333-L383" signature="bitstring_matrix_to_sorted_addresses(bitstring_matrix, open_shell=False)">
+<Function id="qiskit_addon_sqd.fermion.bitstring_matrix_to_sorted_addresses" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.9/qiskit_addon_sqd/fermion.py#L346-L396" signature="bitstring_matrix_to_sorted_addresses(bitstring_matrix, open_shell=False)">
   Convert a bitstring matrix into a sorted array of unique, unsigned integers.
 
   This function separates each bitstring in `bitstring_matrix` in half, flips the bits and translates them into integer representations, and finally appends them to their respective (spin-up or spin-down) lists. Those lists are sorted and output from this function.
