--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -34,7 +34,7 @@ Available IBM Cloud plans:
    <Admonition type="note">
    You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
    </Admonition>
-1. Create an instance, if necessary. Go to the [IBM Quantum Platform dashboard](https://quantum.cloud.ibm.com). If you have one or more instances shown, continue to the next step.
+1. Create an instance, if necessary. Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, continue to the next step.
    1. Make sure that you have the correct account selected from the account switcher in the top header. Click **Create instance**. Choose a name and the plan to use. Next, scroll down to see the **Terms** link.  After reading the terms, agree to the license agreements by checking the box in the bottom right corner of the page, and click **Next**.
    1. On the Plan inheritance page, leave the default setting (toggle is not enabled) and click **Next** if you're setting up an Open instance.  If you are not setting up an Open instance and you want different QPUs to be available on this instance, enable the "Customize allocated compute resources" toggle, choose the QPUs you want this instance to be able to access, then click **Next**.
       <Admonition type="note">
