--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -27,9 +27,9 @@ Learn how to limit your costs when using the Standard Plan on IBM Quantum&reg; P
 </LegacyContent>
 
 <span id="cost-limit"></span>
-## Set, change, and view a cost limit or instance limit
+## Set or change a cost limit or instance limit
 
-An instance administrator can limit how much is spent. There are several ways to set this limit:
+An instance administrator can limit how much is spent. There are several ways to set or change this limit:
 
 * **API**: Set the instance limit in seconds.
    * New IBM Quantum Platform users: [`PUT /v1/instances/configuration "instance_limit":<seconds>`](/api/qiskit-runtime-rest/tags/instances#tags__instances__operations__replace_instance_data).
