--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -47,7 +47,7 @@ An instance administrator can limit how much is spent. There are several ways to
          '{"instance_limit_seconds":"<SECONDS>"}'
       ```
       where:
-      \<`INSTANCE_CRN`\>: The CRN of the instance you want to update. You can get it from the [IBM Quantum Platform dashboard.]((https://quantum.cloud.ibm.com))
+      \<`INSTANCE_CRN`\>: The CRN of the instance you want to update. You can get it from the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com)
       \<`SECONDS`\>: The maximum number of seconds that can be consumed by the instance. For example, to establish a limit of 1000 seconds (1000 * $1.6 = $1,600)
    1. View the limit to verify that it was updated: `ibmcloud resource service-instance <INSTANCE_CRN> -o json`
       This command returns a JSON.  For example:
