--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -90,7 +90,8 @@ There are several ways to view the current cost limit:
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
 
    ```cli
-   ibmcloud resource service-instance-update $INSTANCE_CRN_OR_NAME -p '{"instance_limit_seconds":null}'
+   ibmcloud resource service-instance-update <instance_CRN> -p
+      '{"instance_limit_seconds":null}'
    ```
 {/** **User interface**: Navigate to the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, then open the instance and click the edit button by the Cost limit. Delete the value and click **Save**. */}
 
@@ -106,7 +107,8 @@ An instance administrator can remove the cost limit in several ways:
 * **IBM Cloud CLI**: For instructions to use the CLI, refer to [Getting started with the IBM Cloud CLI.](https://cloud.ibm.com/docs/cli?topic=cli-getting-started)
 
    ```cli
-   ibmcloud resource service-instance-update $INSTANCE_CRN_OR_NAME -p '{"instance_limit_seconds":null}'
+   ibmcloud resource service-instance-update <instance_CRN> -p
+      '{"instance_limit_seconds":null}'
    ```
 {/* * **User interface**: Navigate to the <LegacyContent>[IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances)</LegacyContent><CloudContent>[Instances page](https://quantum.cloud.ibm.com/instances)</CloudContent>, then open the instance and click the edit button by the Cost limit. Delete the value and click **Save**. */}
 
