classic to Classic

--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -8,7 +8,7 @@ description: Migrate to using the new IBM Quantum Platform (early access) for Op
 This guide is for users who do not have Premium access and want to start using the updated version of IBM Quantum&reg; Platform (which runs on IBM Cloud&reg;). If you have Premium access, contact your administrator for instructions.
 
 <Admonition type="caution" title="Important">
-The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use the [classic IBM Quantum Platform](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
+The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use [IBM Quantum Platform Classic](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
 </Admonition>
 
 ## Benefits
@@ -23,7 +23,7 @@ There are a few major changes you will see in the updated IBM Quantum Platform:
 * Open Plan users cannot run session jobs.  Previously, if you tried to run a job in a session, it was run in job mode.  Now, if you try to run a job in a session, the job fails.  Instead, Open Plan users should explicitly write their code to run in job or batch mode. See [execution modes](/guides/execution-modes) to learn how to set the execution mode.
 * When activating the service, an instance is required, and the channel must be set to `ibm_cloud`. The instance is specified by using its cloud resource name (CRN).
 * Quantum computers powered by the state-of-the-art IBM Quantum Heron processor are available through the Open Plan.
-* For classic IBM Quantum Platform users, the hierarchical authorization structure has changed.  That is, there are no hubs, groups, or projects in the new platform. All user management is done through IBM Cloud [identity and access management (IAM)](https://cloud.ibm.com/docs/account?topic=account-iamoverview). By default, access groups are created for you when you create an instance through the IBM Quantum Platform user interface.
+* For IBM Quantum Platform Classic users, the hierarchical authorization structure has changed.  That is, there are no hubs, groups, or projects in the new platform. All user management is done through IBM Cloud [identity and access management (IAM)](https://cloud.ibm.com/docs/account?topic=account-iamoverview). By default, access groups are created for you when you create an instance through the IBM Quantum Platform user interface.
 
 ### Instances
 
@@ -44,7 +44,7 @@ The Lite Plan is deprecated and will be removed on 14 March 2025.
 
 ## Current IBM Quantum Platform users
 
-Instead of accessing the [classic IBM Quantum Platform](https://quantum.ibm.com/), you will now access the [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  Because of this integration, all users need to follow the onboarding instructions before using the new platform.
+Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), you will now access the [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  Because of this integration, all users need to follow the onboarding instructions before using the new platform.
 
 <span id="onboard"></span>
 ### Onboard
