--- a/docs/migration-guides/migrate-classic-rest-api.mdx
+++ b/docs/migration-guides/migrate-classic-rest-api.mdx
@@ -7,7 +7,7 @@ description: Migrate from using the current Qiskit Runtime REST API on any platf
 
 # Migrate to the new Qiskit Runtime REST API
 
-As part of the move to the new IBM Quantum&reg; Platform, the Qiskit Runtime REST API on the classic IBM Quantum Platform and the Qiskit Runtime REST API on IBM Cloud&reg; have been combined into one REST API: the *Qiskit Runtime REST API*.
+As part of the move to the new IBM Quantum&reg; Platform, the Qiskit Runtime REST API on IBM Quantum Platform Classic and the Qiskit Runtime REST API on IBM Cloud&reg; have been combined into one REST API: the *Qiskit Runtime REST API*.
 
 This guide explains the changes to the REST API and provides suggestions on how to migrate, whether you were previously using either the IBM Cloud or IBM Quantum Platform version.
 
@@ -29,7 +29,7 @@ If you are moving from the [Qiskit Runtime on IBM Cloud REST API](https://cloud.
 For the whole schema, see the [Qiskit Runtime API.](https://quantum.cloud.ibm.com/api/docs/)
 
 
-## Migrate from the Qiskit Runtime REST API on the classic IBM Quantum Platform
+## Migrate from the Qiskit Runtime REST API on IBM Quantum Platform Classic
 
 If you are moving from the classic [Qiskit Runtime REST API,](https://docs.quantum.ibm.com/api/runtime) there are two new concepts that are important to understand: **Instances** and **IAM bearer tokens**.
 
@@ -78,7 +78,7 @@ curl -X 'GET' \
 
 ### Changes to the endpoints of the REST API
 
-Many of the endpoints from the REST API on the classic IBM Quantum Platform have either changed or been removed because of this merge. The following sections list the endpoints that are changing, and provide a suggested replacement (if applicable).
+Many of the endpoints from the REST API on IBM Quantum Platform Classic have either changed or been removed because of this merge. The following sections list the endpoints that are changing, and provide a suggested replacement (if applicable).
 
 For the whole schema, see the [Qiskit Runtime API.](https://quantum.cloud.ibm.com/api/docs/)
 
