--- a/docs/migration-guides/index.mdx
+++ b/docs/migration-guides/index.mdx
@@ -10,7 +10,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
 
 * Migrate to the new version of IBM Quantum&reg; Platform
    * [Migrate to the new IBM Quantum Platform (early access)](./classic-iqp-to-cloud-iqp)
-   * [Migrate from using the Qiskit Runtime REST API on the classic IBM Quantum Platform classic to using the new Qiskit Runtime REST API.](./migrate-classic-rest-api#migrate-from-the-qiskit-runtime-rest-api-on-the-classic-ibm-quantum-platform)
+   * [Migrate from using the Qiskit Runtime REST API on IBM Quantum Platform Classic classic to using the new Qiskit Runtime REST API.](./migrate-classic-rest-api#migrate-from-the-qiskit-runtime-rest-api-on-the-classic-ibm-quantum-platform)
    * [Migrate from using the Qiskit Runtime on IBM Cloud REST API to using the REST API for the new version of IBM Quantum Platform.](./migrate-classic-rest-api#migrate-from-the-qiskit-runtime-on-ibm-cloud-rest-api)
 * Migrate to Qiskit v1.0
    * [Install the new Qiskit v1.0 package](./qiskit-1.0-installation)
