fix undefined variables

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+    "cell_type": "code",
+    "execution_count": null,
+    "id": "613c4d93",
+    "metadata": {
+     "tags": [
+      "remove-cell"
+     ]
+    },
+    "outputs": [],
+    "source": [
+     "# This cell is hidden from users\n",
+     "# It stops the linter complaining about undefined variables\n",
+     "# ruff: noqa: F821"
+    ]
+   },
+  {
    "cell_type": "markdown",
    "id": "dde95705",
    "metadata": {},
