update next steps

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -2183,14 +2183,11 @@
    "source": [
     "## Next steps\n",
     "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "- Try reading [the associated research paper](https://qunova-my.sharepoint.com/:b:/g/personal/pellow_r_qunovacomputing_com/EcDyE4yQD_NAppzyUvhnlrABIMlqY3JhrLS41hkBPk22uQ?e=2dx3JT).\n",
     "- Request access to the function by filling in [this form](https://forms.office.com/r/zN3hvMTqJ1).\n",
-    "- Try the [Compute dissociation PES curve for Li2S with HiVQE](https://learning.quantum.ibm.com/tutorial/tutorial-hivqe-Li2S-PES-qunova-hivqe) tutorial.\n",
-    "- Try one of our use-case examples:\n",
-    "    - [Compute single point energies of $NH_3$ with Qunova HiVQE](https://learning.quantum.ibm.com/tutorial/use-case-1-NH3-Energy-qunova-hivqe)\n",
-    "    - [Compute dissociation PES curve for $N_2$ using 32 qubits with Qunova HiVQE](https://learning.quantum.ibm.com/tutorial/use-case-2-N2-PES-32qubits-qunova-hivqe)\n",
-    "    - [Compute dissociation PES curve for $N_2$ using 40 qubits with Qunova HiVQE](https://learning.quantum.ibm.com/tutorial/use-case-3-N2-PES-40qubits-qunova-hivqe)\n",
-    "    - [Compute dissociation PES curve for FeP-NO using 44 qubits with Qunova HiVQE](https://learning.quantum.ibm.com/tutorial/use-case-4-fepno-PES-44qubits-qunova-hivqe)"
+    "- Try the [Compute dissociation PES curve for FeP-NO with HiVQE](https://learning.quantum.ibm.com/tutorial/qunova-hivqe) tutorial.\n",
+    "</Admonition>"
    ]
   }
  ],
