Update code examples in external providers guide, apply Jessie's feedback

--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -14,7 +14,7 @@ to the primitives framework, and `backend.run()` remains in Qiskit for backward 
 This guide is for you if you have written or want to write code using `Sampler` and `Estimator` 
 primitives but need to interact with a provider that still relies on `backend.run()`. If you are a 
 provider developer looking to implement and expose your own `Sampler` and 
-`Estimator` primitives, you can find guidance [here](link).  
+`Estimator` primitives, you can find guidance [here](/migration-guides/external-providers-primitives-v2).  
 
 For providers that don't expose native primitives, the Qiskit SDK offers wrappers for `backend.run` that can 
 used out-of the box: the [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) and 
