--- a/docs/migration-guides/qiskit-backend-primitives.mdx
+++ b/docs/migration-guides/qiskit-backend-primitives.mdx
@@ -37,7 +37,7 @@ internally wrap the access to the internal provider through `backend.run()` and 
 with the `mode` input argument of [`SamplerV2`](sampler-v2 "qiskit_ibm_runtime.SamplerV2") 
 and [`EstimatorV2`](estimator-v2 "qiskit_ibm_runtime.EstimatorV2").
 
-2. the use of `options`, which cointains one more level of nesting compared to provider-specific primitives and
+2. the use of `options`, which contains one more level of nesting compared to provider-specific primitives and
 is initially provided as a `dict` instead of an `Options` instance.
 The first level of nesting includes (`default_shots`, `seed_simulator` and `run_options`) for the `BackendSamplerV2`
 and (`default_precision`, `abelian_grouping`, `seed_simulator` and `run_options`) for the `BackendEstimatorV2`.
@@ -46,7 +46,7 @@ The `run_options` field defines the options to pass through to the `.run()` meth
 Note that because these wrappers are independent of `qiskit_ibm_runtime`, they do not offer access to execution
 modes (`Session`/`batch`), local testing modes, or any other `qiskit_ibm_runtime`-specific feature. These are up to the
 third-party provider to implement and expose, ideally through a native primitive. 
-If the use of the third-party backend requries a more fine-grained option handling
+If the use of the third-party backend requires a more fine-grained option handling
 strategy that is not covered by the out-of-the-box wrapper, it is always possible to extend the 
 [`BackendSamplerV2`.](/api/qiskit/qiskit.primitives.BackendSamplerV2) and 
 [`BackendEstimatorV2`](/api/qiskit/qiskit.primitives.BackendEstimatorV2) interfaces through subclassing to fit the specific 
