add intro and start organizing

--- a/docs/migration-guides/qiskit-backendv1-to-v2.mdx
+++ b/docs/migration-guides/qiskit-backendv1-to-v2.mdx
@@ -5,6 +5,10 @@ description: How to update your code to use `BackendV2` instead of `BackendV1`.
 
 # Migrate from `BackendV1` to `BackendV2`
 
+The Qiskit [`BackendV1`](/api/qiskit/qiskit.providers.BackendV1) class has been deprecated and will be removed from service.  This guide describes how to migrate to [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2).
+
+## Changes in `BackendV2`
+
 The [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) class redefined
 user access for most backend properties to make them work with native Qiskit data structures and have flatter
 access patterns. However, this means when using a provider that upgraded
