--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -40,7 +40,9 @@ To run in session mode, specify `mode=session` when instantiating a primitive, o
 <Admonition type="note" title="Notes">
 - The queuing time does not decrease for the first job submitted within a session. Therefore, sessions do not provide any benefits when running a single job.
 - Sessions do not work on simulators because simulators do not have a queue.
-<CloudContent> - Open Plan users cannot submit session jobs.</CloudContent>
+<CloudContent>
+- Open Plan users cannot submit session jobs.
+</CloudContent>
 </Admonition>
 
 ## Basic workflow
