Update paper link for Qunova

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "Combining the strengths of both classical and quantum computers, HiVQE iteratively refines and improves the current estimate wave function. Its unique subspace construction techniques help make configuration selection more efficient, so that users have greater computational control and improved accuracy in quantum chemistry simulations.\n",
     "\n",
-    "If you would like to learn about the algorithm in more depth, you can [read the associated research paper](https://qunova-my.sharepoint.com/:b:/g/personal/pellow_r_qunovacomputing_com/EcDyE4yQD_NAppzyUvhnlrABIMlqY3JhrLS41hkBPk22uQ?e=2dx3JT)."
+    "If you would like to learn about the algorithm in more depth, you can [read the associated research paper](https://arxiv.org/abs/2503.06292)."
    ]
   },
   {
@@ -616,7 +616,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "- Read [the associated research paper](https://qunova-my.sharepoint.com/:b:/g/personal/pellow_r_qunovacomputing_com/EcDyE4yQD_NAppzyUvhnlrABIMlqY3JhrLS41hkBPk22uQ?e=2dx3JT).\n",
+    "- Read [the associated research paper](https://arxiv.org/abs/2503.06292).\n",
     "- Request access to the function by filling in [this form](https://forms.office.com/r/zN3hvMTqJ1).\n",
     "- Try the [Compute dissociation PES curve for FeP-NO with HiVQE](https://learning.quantum.ibm.com/tutorial/qunova-hivqe) tutorial.\n",
     "</Admonition>"
